[package]
name = "dead-punk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_ecs_tilemap = "0.11.0"
bevy-inspector-egui = "0.21.0"
bevy_sprite3d = "2.5.0"
bevy_rapier3d = { version = "0.23.0", features = [ "simd-stable", "debug-render-3d" ] }